# flakes

./: .envrc  .gitignore  flake.nix
.mcp/: servers.json
configs/: .gitignore  Cargo.toml  pyproject.toml
templates/astro/: flake.nix
templates/astro/.mcp/: servers.json
templates/bun/: flake.nix
templates/default/: .envrc
templates/go/: flake.nix
templates/just/: justfile
templates/lua/: flake.nix
templates/moon/: moon.yml
templates/moon/.moon/: tasks.yml  toolchain.yml  workspace.yml
templates/py/: .envrc
templates/python/: flake.nix
templates/rust/: flake.nix
templates/ts/: .envrc  biome.jsonc
templates/typescript/: biome.jsonc  flake.nix
templates/zig/: flake.nix
templates/zig/go/: flake.nix
templates/zig/mcp/: flake.nix
templates/zig/python/: flake.nix
templates/zig/rust/: flake.nix
templates/zig/typescript/: flake.nix
